change botton's border and background color'

--- a/style.css
+++ b/style.css
@@ -41,14 +41,15 @@ h2 {
   font-size: 40px;
 }
 button {
-  margin-top: 8em;
+  margin: 8em 0 2em 0;
   font-size: 15px;
   font-weight: bold;
   padding: 15px;
   border-radius: 5em;
   cursor: pointer;
   width: 10em;
-  border: 3px solid white;
+  background-color: hsl(0, 0%, 95%);
+  border: 3px solid hsl(0, 0%, 95%);
 }
 .left button {
   color: hsl(31, 77%, 52%);
